# xtrader

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  environment.yml  pyproject.toml
.github/workflows/: runtime-v1-perf.yml
configs/runtime/: five_min_regime_momentum_v0.3_legacy.strategy.json  threshold_intraday_btcusdt_5m_3y.strategy.json
configs/strategy-profiles/five_min_regime_momentum/: v0.3.json
configs/strategy-profiles/templates/: profile_v0.3.minimal.json
docs/: README.md  docs_information_architecture_optimization_plan.md
docs/01-project/: overview.md  runtime-management.md  system-architecture.md
docs/02-strategy/discussions/: README.md  strategy-discussion-memory.md  trading-strategy-bg.md
docs/02-strategy/playbooks/: strategy-profile-playbook.md
docs/02-strategy/requirements/: README.md  five-min-regime-momentum-v0.3.md
docs/03-delivery/: README.md
docs/03-delivery/backlog/: README.md  TODO-index.md
docs/03-delivery/roadmap/: implementation-ready-checklist.md  implementation-tasks-v0.3.md
docs/03-delivery/specs/: XTR-001.md  XTR-002.md  XTR-003.md  (+33 more)
docs/04-operations/: README.md
docs/05-agent/: README.md
docs/06-history/: README.md
examples/: bitget_client_demo.py
scripts/: analyze_profile_diagnostics_v1.py  analyze_profile_diagnostics_v2.py  backtest_threshold_intraday_15m.py  brief_guard.py  check_score_effectiveness.py  offline_report_viewer.py  refresh_feature_engine_golden.py  run_profile_action_backtest_smoke.py  run_threshold_intraday_runtime_backtest.py  runtime_v1_perf_check.py  task_guard.py  workshop_guard.py
src/xtrader/: __init__.py
tests/integration/: test_bitget_client_live.py  test_proxy_connectivity.py
(+169 files in other folders)
